<resources>
    <string name="app_name">Cocktail Creations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Discover</string>
    <string name="popular_cocktail">Popular Cocktails</string>
    <string name="new_cocktail">New Cocktails</string>
    <string name="directions">Directions</string>
    <string name="ingredients">Ingredients</string>
    <string name="random_drink_title">Random Drink Generator</string>
    <string name="login_subtitle">Login or sign up to experience all of the app\'s
        features.</string>
    <string name="logout">Logout</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="name_hint">Name</string>
    <string name="signup_prompt1">Don\'t have an account?</string>
    <string name="signup_prompt2">Tap here to sign up</string>
    <string name="login_prompt1">Already have an account?</string>
    <string name="login_prompt2">Tap here to login</string>
    <string name="random">Generate Random Drink</string>
    <string name="user_fav_drink">Favorited Cocktails:</string>
    <string name="user_drink_title">Your Created Drinks:</string>
    <string name="add_drink_button_text">Add Drink</string>
    <string name="add_drink_title">Add your own drink</string>
    <string name="add_drink_subtitle">Upload your own custom made drink using the form
        below!</string>
    <string name="drink_name_label">Drink name</string>
    <string name="drink_ingredient_label">Ingredients</string>
    <string name="drink_ingredient_subtitle">List the ingredients you used and
        their measurements below. <b>Be mindful of spelling and separate each
            ingredient and measurement with a comma.</b> If an ingredient has no
        specific measurement, input a blank space followed by a comma. Make sure each
        measurement corresponds with each ingredient!</string>
    <string name="ingredient_hint">Ingredient name</string>
    <string name="measurement_hint">Measurement</string>
    <string name="finish_button">Finish</string>
    <string name="instructions_box_label">Instructions</string>
    <string-array name="category_options">
        <item>Ordinary Drink</item>
        <item>Cocktail</item>
        <item>Milk/Float/Shake</item>
        <item>Other/Unknown</item>
        <item>Cocoa</item>
        <item>Shot</item>
        <item>Coffee/Tea</item>
        <item>Homemade Liqueur</item>
        <item>Punch/Party Drink</item>
        <item>Beer</item>
        <item>Soft Drink/Soda</item>
    </string-array>
    <string-array name="glass_options">
        <item>Highball glass</item>
        <item>Cocktail glass</item>
        <item>Old-fashioned glass</item>
        <item>Whiskey Glass</item>
        <item>Collins glass</item>
        <item>Pousse cafe glass</item>
        <item>Champagne flute</item>
        <item>Whiskey sour glass</item>
        <item>Cordial glass</item>
        <item>Brandy snifter</item>
        <item>White wine glass</item>
        <item>Nick and Nora Glass</item>
        <item>Hurricane glass</item>
        <item>Coffee mug</item>
        <item>Shot glass</item>
        <item>Jar</item>
        <item>Irish coffee cup</item>
        <item>Punch bowl</item>
        <item>Pitcher</item>
        <item>Pint glass</item>
        <item>Copper Mug</item>
        <item>Wine Glass</item>
        <item>Beer mug</item>
        <item>Margarita/Coupette glass</item>
        <item>Beer pilsner</item>
        <item>Beer Glass</item>
        <item>Parfait glass</item>
        <item>Mason jar</item>
        <item>Margarita glass</item>
        <item>Martini Glass</item>
        <item>Balloon Glass</item>
        <item>Coupe Glass</item>
    </string-array>
    <string name="select_category_prompt">Select category</string>
    <string name="select_glass_prompt">Select glass</string>
</resources>