<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signup_fragment"
    tools:context=".SignupFragment">

    <TextView
        android:id="@+id/signup_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="44sp"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signup_heading"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/email_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/name_box"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="25dp"
        android:hint="@string/email_hint"
        android:drawableEnd="@android:drawable/sym_action_email"
        android:drawableTint="@color/purple_500"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email_box"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:drawableEnd="@android:drawable/ic_lock_lock"
        android:drawableTint="@color/purple_500"/>

    <EditText
        android:id="@+id/confirm_password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password_box"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="25dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:drawableEnd="@android:drawable/ic_lock_lock"
        android:drawableTint="@color/purple_500"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_box"
        android:text="@string/signup_button"
        android:textSize="20sp"
        android:paddingVertical="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp" />

    <TextView
        android:id="@+id/login_caption_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_button"
        android:text="@string/login_prompt1"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/login_caption_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_caption_1"
        android:text="@string/login_prompt2"
        android:textSize="18sp"
        android:textColor="@color/purple_500"
        android:textIsSelectable="true"
        android:layout_marginTop="10dp"
        android:gravity="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>