<?xml version="1.0" encoding="utf-8"?>
<!-- Sarah West wrote this file -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/login_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="44sp"
        android:layout_marginTop="75dp"/>
    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_heading"
        android:gravity="center"
        android:text="@string/login_subtitle"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="35dp"
        android:layout_marginHorizontal="30dp"/>

    <EditText
        android:id="@+id/email_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_subtitle"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="45dp"
        android:hint="@string/email_hint"
        android:drawableEnd="@android:drawable/sym_action_email"
        android:drawableTint="@color/purple_500"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email_box"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="45dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:drawableEnd="@android:drawable/ic_lock_lock"
        android:drawableTint="@color/purple_500"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password_box"
        android:text="@string/login_button"
        android:textSize="20sp"
        android:paddingVertical="10dp"
        android:layout_marginTop="75dp"
        android:layout_marginHorizontal="50dp" />

    <TextView
        android:id="@+id/signup_caption_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:text="@string/signup_prompt1"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/signup_caption_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_caption_1"
        android:text="@string/signup_prompt2"
        android:textSize="18sp"
        android:textColor="@color/purple_500"
        android:textIsSelectable="true"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>