<?xml version="1.0" encoding="utf-8"?>

<!--Sarah West and Siena South-Ciero worked on this file-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".AddDrinkFragment"
    android:fillViewport="true"
    android:paddingBottom="60dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <TextView
            android:id="@+id/add_drink_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="20dp"
            android:text="@string/add_drink_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/add_drink_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/add_drink_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/add_drink_title" />

        <EditText
            android:id="@+id/drink_name_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/drink_name_label"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/add_drink_subtitle" />
        <LinearLayout
            android:id="@+id/glass_and_category_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/drink_name_box">

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dialog"
                android:prompt="@string/select_category_prompt"/>
            <Spinner
                android:id="@+id/glass_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dialog"
                android:prompt="@string/select_glass_prompt"/>

        </LinearLayout>

        <TextView
            android:id="@+id/drink_ingredient_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:text="@string/drink_ingredient_label"
            app:layout_constraintTop_toBottomOf="@+id/glass_and_category_section" />

        <TextView
            android:id="@+id/drink_ingredient_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/drink_ingredient_label"
            android:text="@string/drink_ingredient_subtitle" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingredient_measurement_boxes"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/drink_ingredient_subtitle" >
            <EditText
                android:id="@+id/ingredient_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:hint="@string/ingredient_hint"/>
            <EditText
                android:id="@+id/measurement_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:hint="@string/measurement_hint"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/instructions_box_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/ingredient_measurement_boxes">
            <TextView
                android:id="@+id/instructions_box_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/instructions_box_label"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_measurement_boxes" />

            <EditText
                android:id="@+id/instructions_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Write how to make your drink!"
                app:layout_constraintBottom_toBottomOf="@+id/instructions_box_label" />
        </LinearLayout>
        <ImageView
            android:id="@+id/drink_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintTop_toBottomOf="@+id/instructions_box_container" />

        <ImageButton
            android:id="@+id/camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintTop_toBottomOf="@id/drink_photo"
            android:layout_margin="10dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/finish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_button"
            app:layout_constraintTop_toBottomOf="@+id/camera_button"
            android:layout_marginHorizontal="40dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>